--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SejutaCita",
+  "name": "Aplikasi Informasi Lomba, Event, Beasiswa, Webinar no 1 di Indonesia Untuk Mahasiswa dan SMA",
   "icons": [
     {
       "src": "favicon.ico",
